@@ -1,4 +1,4 @@
-/* ANSI-C code produced by gperf version 3.0.3 */
+/* ANSI-C code produced by gperf version 3.0.2 */
 
 
 #if 0 /* gperf build options: */
@@ -91,9 +91,6 @@ static const value_type_map_t value_type_table[] =
   };
 
 #ifdef __GNUC__
-#ifdef __GNUC_STDC_INLINE__
-__attribute__ ((__gnu_inline__))
-#endif
 #endif
 static inline const value_type_map_t *
 find_value_type_name (register const char *str, register unsigned int len)
