@@ -2,7 +2,7 @@
  *  
  *  DO NOT EDIT THIS FILE   (options.h)
  *  
- *  It has been AutoGen-ed  Saturday May 16, 2009 at 08:15:53 AM PDT
+ *  It has been AutoGen-ed  Monday July 20, 2009 at 09:05:14 PM PDT
  *  From the definitions    funcs.def
  *  and the template file   options_h
  *
@@ -773,7 +773,7 @@ extern int optionProcess(tOptions*, int, char**);
 extern void optionRestore(tOptions*);
 
 
-/* From: save.c line 670
+/* From: save.c line 671
  *
  * optionSaveFile - saves the option state to a file
  *
